# Closure-SDK

./: .gitignore  CLOSURE_CLI.md  CLOSURE_SDK.md  README.md  TEST_RESULTS.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
benchmarks/: benchmark_sdk.py  demo_stream.py
benchmarks/outputs/: benchmark_sdk.txt  demo_stream.txt
brahman/: BRAHMAN.md  DRAWING_BOARD.md  __init__.py  __main__.py  data.py  model.py  train.py  two_enkidu_brackets.py
brahman/enkidu_alive/: ENKIDU_ALIVE.md  README.md  homeostasis.py  test_waypoints.py
brahman/visual/: sweep_overhead.py
closure_cli/: __init__.py  __main__.py  formatter.py  identity.py  observer.py  reader.py  seeker.py
closure_dna/: CLOSURE_DNA.md  README.md  __init__.py  __main__.py  cli.py  database.py  query.py  repl.py  result.py  sql.py  table.py  web.py
closure_dna/benchmarks/: bench_dna.py
closure_dna/demo/: README.md  __init__.py  registry.py
closure_dna/demo_data/: README.md  datasets.json
closure_dna/rust/src/: table.rs  (+1 more)
closure_dna/tests/: conftest.py  test_cli.py  test_database.py  test_demo.py  test_dna_cli.py  test_dna_rigorous.py  test_repl.py  test_sql.py  test_table.py
closure_ea/: CLOSURE_EA_REFACTOR_IMPLEMENTATION.md  Cargo.toml  EA_STRICT_THEORY_REFACTOR.md  README.md  __init__.py  __main__.py  cell.py  genome.py  kernel.py  lattice.py  trinity.py
closure_ea/demos/enkidu_alive/: README.md  enkidu_alive_sdk.html  geometry.py  grounded_vocab.py  homeostasis.py  test_geometry.py  test_homeostasis.py
closure_ea/docs/: CLOSURE_EA.md  GeometricComputer.tex
closure_ea/enkidu_alive/: enkidu_alive.html  homeostasis.py  test_homeostasis.py
closure_ea/src/: buffer.rs  carrier.rs  consolidation.rs  embed.rs  execution.rs  field.rs  genome.rs  hierarchy.rs  hopf.rs  lib.rs  localization.rs  neuromodulation.rs  sphere.rs  teach.rs  three_cell.rs  verify.rs  zeta.rs
closure_ea/tracks/: __init__.py
closure_ea/tracks/music/: DATASETS.md  GILGAMESH_KNOWS_MUSIC.md  README.md  bach_generic.py  music.py  song_viewer_template.html
closure_ea/tracks/walking/: WALKING.md  __init__.py  biped.py  biped.urdf  body.py  enkidu3d.py  learn_stairs.py  learn_to_walk.py  phase1_stand.py  walking_adapter.py  watch_stand.py
closure_ea/vm/: SPEC.md
closure_ea/vm/src/: arithmetic.rs  cell.rs  control.rs  lib.rs  logic.rs  word.rs  word_memory.rs
closure_rs/: __init__.py
closure_sdk/: __init__.py  canon.py  hopf.py  lenses.py  ops.py  state.py  valence.py
data/: DATA_CATALOG.md  test_a.jsonl  test_b.jsonl  test_stress_a.jsonl  test_stress_b.jsonl  walmart_a_100.jsonl  walmart_b_100.jsonl
docs/: about.html  collaborate.html  demo.html  enkidu.html  experiments.html  horizon-webgl.js  horizon.html  index.html  learning.html  newsletter.html  noise-experiment.html  noise-trace.json  origin.html  seeing-code.html  stack.html  storage.html  styles.css  support.html  supporting-models.html  verification.html
examples/: 01_detect_drift.py  02_find_incidents.py  03_stream_classify.py  04_bind.py  05_color_channels.py
rust/: Cargo.toml  pyproject.toml
rust/src/: embed.rs  hierarchy.rs  lib.rs  path.rs  pyo3_bindings.rs
rust/src/groups/: circle.rs  hybrid.rs  mod.rs  sphere.rs  torus.rs
tests/: conftest.py  test_cli.py  test_enkidu.py  test_fast_path.py  test_gilgamesh.py  test_groups.py  test_hierarchy.py  test_path.py  test_retention.py  test_sdk.py  test_stream_classifier.py  test_stream_monitor.py  test_theorems.py
(+30 files in other folders)
