[project]
name = "closure-sdk"
version = "1.0.0"
description = "Algebraic data structure for verifying ordered sequences over Lie groups"
readme = "CLOSURE_SDK.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Walter Henrique Alves da Silva", email = "walter.h057@gmail.com"}
]
dependencies = ["numpy>=1.24"]

[project.scripts]
closure = "closure_cli.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
