[package]
name = "closure-ea"
version = "0.1.0"
edition = "2021"
description = "Closure ea — the digital brain. Self-contained S³ substrate, two machines, the verification verb, and the transient buffer."
license = "AGPL-3.0-only"

[lib]
name = "closure_ea"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
